--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Touching Game!</title>
-  <link rel="stylesheet" href="TouchingGame.css">
+  <title>MagnoMouse</title>
+  <link rel="stylesheet" href="MagnoMouse.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -50,7 +50,7 @@
       <button id="quit">Quit!</button>
     </section>
   </div>
-  <script src="TouchingGame.js"></script>
+  <script src="MagnoMouse.js"></script>
 </body>
 
 </html>
