Added input validation and updated logo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MagnoMouse</title>
-  <link rel="icon" href="potentialLogo.png">
+  <link rel="icon" href="Logo2.png">
   <link rel="stylesheet" href="MagnoMouse.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
