--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MagnoMouse</title>
   <link rel="icon" href="Logo2.png">
+  <!-- <link rel="stylesheet" href="../ResetCSS.css"> -->
   <link rel="stylesheet" href="MagnoMouse.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,69 +17,90 @@
 
 <body>
   <!-- Starting page -->
-  <div id="init">
-
-    <h1>Welcome to the MagnoMouse game!</h1>
-    <h4>In this game, your mouse behaves like a Magnet! You have to determine the location of buttons which exhibit
-      metallic property.</h4>
-
-    <div class="container">
-
-      <div class="seven">
-
-        <form action="/">
-          <div class="input">
-            <label for="btncnt">Enter the number of buttons:</label>
-            <input type="number" name="btncnt" id="btncnt" required>
-          </div>
-          <div class="input">
-            <span>Select Difficulty:</span>
-            <input type="radio" name="difficulty" id="easy" value="easy" required>
-            <label for="easy">Easy</label>
-            <input type="radio" name="difficulty" id="med" value="med">
-            <label for="med">Medium</label>
-            <input type="radio" name="difficulty" id="hard" value="hard">
-            <label for="hard">Hard</label>
-          </div>
-          <button id="sbmt">Submit</button>
-        </form>
+  <div id="navbar" style="display:none">
+    <div class="navcontainer">
+      <div class="nav25">
+        <button id="quit">
+          <svg width="1.1em" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L136 256l155.5 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
+              fill="currentColor" />
+          </svg>Quit
+        </button>
+        <div id="screen"></div>
       </div>
-      <div class="three">
-        <div><span style="font-weight: 500; display:block;">Easy:</span>
-          <div>
-            Buttons have response time of 0ms.
-          </div>
+      <div class="nav50">Time:</div>
+      <div class="nav25">
+        <div id="more">Buttons Remaining:</div>
+        <button id="submit">Submit</button>
+      </div>
+    </div>
+  </div>
+  <main>
+
+    <div id="init">
+
+      <h1>Welcome to MagnoMouse!</h1>
+      <h4>In this game, your mouse behaves like a Magnet! You have to determine the location of buttons which exhibit
+        metallic property.
+        Hover over the button, you will be alerted if the button is metallic!
+        Your goal is to report all the metallic buttons, you can quit midway if it is too difficult.</h4>
+      <h5>Note: Each button has 0.1% chance to be metallic!</h5>
+
+      <div class="container">
+
+        <div class="seven">
+
+          <form action="/">
+            <div class="input">
+              <label for="btncnt">Enter the number of buttons:</label>
+              <input type="number" name="btncnt" id="btncnt" required>
+            </div>
+            <div class="input">
+              <span>Select Difficulty:</span>
+              <input type="radio" name="difficulty" id="easy" value="easy">
+              <label for="easy">Easy</label>
+              <input type="radio" name="difficulty" id="med" value="med" required>
+              <label for="med">Medium</label>
+              <input type="radio" name="difficulty" id="hard" value="hard">
+              <label for="hard">Hard</label>
+            </div>
+            <button id="sbmt">Submit</button>
+          </form>
         </div>
-        <div><span style="font-weight: 500; display:block;">Medium:</span>
-          <div>
-            Buttons have a minimum response time of 500ms, maximum begin 1000ms.
+        <div class="three">
+          <div><span style="font-weight: 500; display:block;">Easy:</span>
+            <div>
+              Buttons have response time of 0ms.
+            </div>
           </div>
-        </div>
-        <div><span style="font-weight: 500; display:block;">Hard:</span>
-          <div>
-            Really hard.
+          <div><span style="font-weight: 500; display:block;">Medium:</span>
+            <div>
+              Buttons have a minimum response time of 1000ms, maximum begin 2000ms.
+            </div>
+          </div>
+          <div><span style="font-weight: 500; display:block;">Hard:</span>
+            <div>
+              Really hard.
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- The part after continuing -->
-  <div id="scnd" style="display:none">
+    <!-- The part after continuing -->
+    <div id="scnd" style="display:none">
+      <h4>Hover over each button, if a button shows metallic nature then you will be alerted. Then report that number
+        to the "I found one" button. Report all the buttons to win.
+      </h4>
+      <h5>Note: Each button has 0.1% chance to be metallic!</h5>
 
-    <h4>Hover over each button, if a button shows metallic nature then you will be alerted. Then report that number
-      to the "I found one" button. Report all the buttons to win.
-      Note that, each button has 0.1% chance to be metallic.
-    </h4>
-
-    <div id="container">
+      <div id="container">
+      </div>
+      <section id="foot">
+        <button id="found">I found one!</button>
+      </section>
     </div>
-    <section id="foot">
-      <button id="found">I found one!</button>
-      <button id="more">How many more?</button>
-      <button id="submit">Submit</button>
-      <button id="quit">Quit!</button>
-    </section>
-  </div>
+  </main>
   <script src="MagnoMouse.js"></script>
 </body>
 
