Added a visually appealing effect to navbar

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div id="screen"></div>
       </div>
       <div class="nav40">
+        <div class="textstyle">Attempts</div>
         <div id="Timer" style="display:none"></div>
         <div id="attempts"></div>
       </div>
