Added a cover to display result and removed ALL alerts.

--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
       <div id="container">
       </div>
     </div>
+    <div id="cover" style="display:none">
+      <div id="card">
+        <div id="gameStatus"></div>
+        <button id="retry">Retry</button>
+      </div>
+    </div>
   </main>
   <script src="MagnoMouse.js"></script>
 </body>
