--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
               fill="currentColor" />
           </svg>Quit
         </button>
+        <button id="pause" style="display:none"><svg xmlns="http://www.w3.org/2000/svg" width="1.2em"  fill="currentColor" class="bi bi-pause-fill" viewBox="0 0 16 16">
+          <path d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5m5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5"/>
+        </svg>Pause</button>
         <div id="screen"></div>
       </div>
       <div class="nav40">
